[gd_scene load_steps=4 format=3 uid="uid://cvkmqwxo22jva"]

[ext_resource type="Texture2D" uid="uid://bax33yuwiqm62" path="res://assets/Square.png" id="1_3b145"]
[ext_resource type="Script" path="res://scripts/enimigos.gd" id="2_kqysy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_llmou"]
size = Vector2(16, 16)

[node name="Enimigos" type="Sprite2D"]
modulate = Color(0.639216, 0, 0.501961, 1)
scale = Vector2(2, 2)
texture = ExtResource("1_3b145")
script = ExtResource("2_kqysy")

[node name="HitBox" type="Area2D" parent="."]

[node name="Col" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_llmou")

[node name="TimerRecuo" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="TimerRecuo" to="." method="_on_timer_recuo_timeout"]
